[NEW] New method added to IFAUIUtils: deviceSupportsVibration. This method has been moved from IFAFoundation.