@@ -161,3 +161,4 @@ FOUNDATION_EXPORT const unsigned char IFACoreUIVersionString[];
 #import "IFAHudWrapperViewController.h"
 #import "NSMutableArray+IFACoreUI.h"
 #import "IFAAlertContainerViewController.h"
+#import "IFAEntityConfig+IFACoreUI.h"
